# multiwfn2vesta

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: usage.md
examples/input_files/: FAPbI3.cif
src/multiwfn2vesta/: MultiwfnRunner.py  cub.py  main.py  multiwfn_controller.py  vesta_controller.py
tests/: DIB_preopt.inp  log.txt  test_multiwfn.py  test_vesta.py
