[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiwfn-vesta-interface"
version = "0.1.0"
description = "Interface for Multiwfn calculations and VESTA visualization"
authors = [{name = "Stardust0831", email = "13862180016@163.com"}]
dependencies = []  
requires-python = ">=3.6"  